2007-02-08  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el: added useful wrapper to recursive-edit

	* config/org-config.el (org-agenda): don't minimize ecb compilation window

2007-01-27  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/psvn.el: update from mainstream

	* lib/outline-magic.el: initial checkin

	* lib/lua-mode.el: initial checkin

	* lib/blank-mode.el: initial checkin

	* dotemacs.el (savehist): save kill-ring accross sessions

	* custom/autoloads.el (autoload): autoload blanc-mode and predictive

	* config/winring-config.el (eval-when-compile): fix compilation

	* config/outline-config.el: initial checkin

	* config/latex-config.el (outline-config): configure outline for LaTeX-mode

	* config/buffer-config.el (eval-when-compile): fix compilation

2006-12-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/paredit.el: upgrade to latest beta

	* dotemacs.el: add viewport scrolling
	setup *scratch* buffer from the start

	* custom/patches.el (add-mhook): add &optional arguments

	* config/winring-config.el (winring): fix loading order

	* config/lisp-config.el (yh/lisp-hook): remove reference to sexp hilighting

2006-12-12  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs-cust.el (custom-set-variables): ignore newlines in regexp searches

	* custom/mycompletion.el (auto-insert-alist): fix C(++) headers

	* config/winring-config.el: configuration for winring

2006-11-25  Yann Hodique  <Yann.Hodique@lifl.fr>

	* custom/patches.el (backup-directory-alist): disable tramp backups

	* lib/incr.el: initial checkin

2006-09-11  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/paredit.el: update to latest version

	* dotemacs.el: write windmove bindings in an obfuscated way ;)

	* custom/patches.el: fix strange behavior of mouse-insert-selection-internal

	* config/circe-config.el (yh/lui-truncate): customize truncation

2006-08-03  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/psvn.el: new version

	* lib/paredit.el: new version
